--- a/DinnerDDD.Application/DinnerDDD.Application.csproj
+++ b/DinnerDDD.Application/DinnerDDD.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\DinnerDDD.Domain\DinnerDDD.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Menus\Queries\" />
+  </ItemGroup>
+
 </Project>
