--- a/DinnerDDD.Domain/DinnerDDD.Domain.csproj
+++ b/DinnerDDD.Domain/DinnerDDD.Domain.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="ErrorOr" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BillAggregate\" />
+    <Folder Include="GuestAggregate\" />
+  </ItemGroup>
+
 </Project>
